--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-kakao-maps-sdk": "^1.1.27"
+    "react-kakao-maps-sdk": "^1.1.27",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.0",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.16",
+    "styled-reset": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
